@@ -9,6 +9,12 @@
 #include <cppunit/TestSuite.h>
 #include "TestPlugIn.h"
 
+#ifdef _DEBUG
+#define new DEBUG_NEW
+#undef THIS_FILE
+static char THIS_FILE[] = __FILE__;
+#endif
+
 
 TestPlugInRunnerModel::TestPlugInRunnerModel() : 
     TestRunnerModel( new CPPUNIT_NS::TestSuite( "Default" ) ),
@@ -19,6 +25,7 @@ TestPlugInRunnerModel::TestPlugInRunnerModel() :
 
 TestPlugInRunnerModel::~TestPlugInRunnerModel()
 {
+  freeRootTest();
   delete m_plugIn;
 }
 
@@ -26,6 +33,7 @@ TestPlugInRunnerModel::~TestPlugInRunnerModel()
 void 
 TestPlugInRunnerModel::setPlugIn( TestPlugIn *plugIn )
 {
+  freeRootTest();
   delete m_plugIn;
   m_plugIn = plugIn;
   reloadPlugIn();
@@ -39,6 +47,7 @@ TestPlugInRunnerModel::reloadPlugIn()
   {
     CWaitCursor waitCursor;
     m_history.clear();
+    freeRootTest();
     setRootTest( m_plugIn->makeTest() );
 
     loadHistory();
@@ -49,4 +58,20 @@ TestPlugInRunnerModel::reloadPlugIn()
     loadHistory();
     throw;
   }
+}
+
+
+void 
+TestPlugInRunnerModel::freeRootTest()
+{
+  delete m_rootTest;
+  m_rootTest = 0;
+}
+
+
+void 
+TestPlugInRunnerModel::setRootTest( CPPUNIT_NS::Test *rootTest )
+{
+  freeRootTest();
+  TestRunnerModel::setRootTest( rootTest );
 }
